# pan

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  create_delta.py  create_issues.py  install.sh  lib.rs  pan-build-manifest.md  reconcile.py
.github/workflows/: ci.yml
docs/: CHANGELOG.md  HANDOFF.md  INSTALL.md  ROADMAP.md  USER-GUIDE.md
docs/decisions/: 0001-scope-invoker-components.md
examples/: curl.md
examples/agents/: anthropic.toml  command.toml  echo.toml  helper.toml  pan.toml
pan-agent/: Cargo.toml  README.md
pan-agent/src/: agent.rs  assembler.rs  builtin.rs  command.rs  context.rs  echo.rs  lib.rs  manifest.rs  merge.rs  session.rs
pan-agent/tests/: capstone.rs
pan-cap/: Cargo.toml  README.md
pan-cap/src/: format.rs  fs.rs  http.rs  lib.rs  lsp.rs  shell.rs  skill.rs  snapshot.rs  state.rs  time.rs
pan-cap/tests/: end_to_end.rs
pan-cli/: Cargo.toml  README.md
pan-cli/src/: lib.rs  main.rs
pan-cli/tests/: repl.rs
pan-core/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  verify.sh
pan-core/benches/: bench_latency.rs  bench_memory.rs  bench_persona.rs  bench_throughput.rs
pan-core/docs/: original-readme.md  pan-build-manifest.md  pan-complete-report.md  pan-synthesis.md
pan-core/examples/: walkthrough.rs
pan-core/src/: components.rs  config.rs  events.rs  execution_profile.rs  handles.rs  health.rs  invoker.rs  lib.rs  loop_engine.rs  pipeline.rs  plugind.rs  providers.rs  providers_litellm.rs  providers_llm.rs  registry.rs  schema.rs  state.rs  toolbox.rs
pan-core/src/plugins/: cap_fs.rs  cap_http.rs  cap_mcp.rs  context_history.rs  context_template.rs  exec_docker.rs  exec_local.rs  gov_allow.rs  gov_policy.rs  gov_secrets.rs  memory_vector.rs  mod.rs  obs_admission.rs  obs_logging.rs  sched_cron.rs  sched_eventbus.rs  skill_runner.rs  state_file.rs  state_memory.rs
pan-core/tests/: compile_fail.rs  property.rs  wave_0_exit.rs
pan-core/tests/compile-fail/: governed_bypass.rs  handle_downcast.rs  handle_write.rs  invoker_no_scope_injection.rs
pan-daemon/: Cargo.toml  README.md
pan-daemon/src/: conformance.rs  governor.rs  lib.rs  llm.rs  server.rs  session.rs  wire.rs
pan-daemon/tests/: conformance.rs  load.rs
pan-gateway/: Cargo.toml
pan-gateway/src/: handlers.rs  lib.rs  pool.rs
pan-gateway/static/: app.js  index.html  style.css
pan-gateway/tests/: agents.rs  chat.rs  health.rs
pan-gateway/tests/common/: mod.rs
pan-llm/: Cargo.toml  README.md
pan-llm/src/: anthropic.rs  compactor.rs  evaluator.rs  http.rs  lib.rs  openai.rs
pan-llm/tests/: live_cloud.rs  tool_use.rs
pan-sdk/: README.md  pan_abi.h
pan-sdk/containment-test/: Cargo.toml
pan-sdk/containment-test/src/: main.rs
pan-sdk/rust-hello/: Cargo.toml  plugin.toml
pan-sdk/rust-hello/src/: lib.rs
pan-sdk/tinygo-echo/: go.mod  main.go  plugin.toml
pan-skill/: Cargo.toml  README.md
pan-skill/src/: lib.rs  pan.py  protocol.rs  runner.rs  sandbox.rs
pan-skill/tests/: skill_bridge.rs
pan-tui/: Cargo.toml
pan-tui/src/: lib.rs  main.rs
