[workspace]
members = [
    "pan-core",
    "pan-daemon",
    "pan-skill",
    "pan-agent",
    "pan-cap",
    "pan-cli",
    "pan-llm",
    "pan-gateway",
    "pan-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async substrate (ADR 0001, D4 / Phase 0). `async-trait` gives dyn-compatible
# async trait methods (the pipeline and loop dispatch over `&dyn Governor` /
# `&dyn Provider`, which native `async fn` in traits cannot do). tokio provides
# the runtime, `select!` for the cancellable abandon-path, and `time` for tests.
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "process", "io-util", "io-std"] }
