[package]
name = "pan-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Agent.toml — the manifest and assembler that wire a scoped, config-driven agent from pan-core components (ADR 0001)."

[dependencies]
pan-core = { path = "../pan-core" }
pan-cap = { path = "../pan-cap" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
