[package]
name = "pan-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "The Pan agentic AI gateway: HTTP server with Streamable HTTP streaming."

[dependencies]
pan-core = { path = "../pan-core" }
pan-agent = { path = "../pan-agent" }
pan-cap = { path = "../pan-cap" }
pan-llm = { path = "../pan-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread", "macros", "sync"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.7", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
futures = "0.3"

[[bin]]
name = "pan-gateway"
path = "src/bin/server.rs"

[lints.rust]
unsafe_code = "forbid"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
tempfile = "3"
