[package]
name = "pan-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Tool-using LLM providers (OpenAI-compatible function calling) that plug into pan-core's ReAct loop (ADR 0001)."

[dependencies]
pan-core = { path = "../pan-core" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
