[package]
name = "pan-skill"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "The Python skill runtime: a governed subprocess bridge over pan-core's ScopedInvoker (ADR 0001, D2)."

[dependencies]
pan-core = { path = "../pan-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serial_test = "3"

[lints.rust]
unsafe_code = "forbid"
