[package]
name = "pan-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Terminal UI for Pan agents (ratatui)."

[dependencies]
pan-core = { path = "../pan-core" }
pan-agent = { path = "../pan-agent" }
pan-cap = { path = "../pan-cap" }
pan-llm = { path = "../pan-llm" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "io-std"] }
ratatui = "0.29"
crossterm = "0.28"

[lib]
name = "pan_tui"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"
